# server/router/api/v1/memo_service_converter.go
@@ -43,6 +43,7 @@ func (s *APIV1Service) convertMemoFromStoreWithCreators(ctx context.Context, mem
 		Content:    memo.Content,
 		Visibility: convertVisibilityFromStore(memo.Visibility),
 		Pinned:     memo.Pinned,
+		Featured:   memo.Featured,
 	}
 	if memo.Payload != nil {
 		memoMessage.Tags = memo.Payload.Tags
